# harpoxide

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/harpd/: config.proto
proto/secret/: entry.proto  key.proto
src/: config.rs  main.rs  secret.rs  session.rs
tests/assets/: key.sbox
tests/assets/passwords.sbox/: Alpha.harp  Beta.harp  Gamma.harp
