[package]
name = "harpoxide"
authors = ["Brandon Pitman <bran@bran.land>"]
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
prost = "0.12"
rand = "0.8"
scrypt = { version = "0.11", default-features = false }
sodiumoxide = "0.2"
tempfile = "3"
thiserror = "1"
walkdir = "2"

[build-dependencies]
prost-build = "0.12"
